<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <data>
        <variable
            name="viewModel"
            type="com.reha.casestudy.feature.github.presentation.repolist.RepoListViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="com.reha.casestudy.feature.github.presentation.repolist.RepoListFragment">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?android:actionBarSize"
            app:layout_constraintTop_toTopOf="parent"
            app:title="@string/app_name">

        </androidx.appcompat.widget.Toolbar>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/toolbar"
            app:layout_constraintEnd_toStartOf="@+id/submitBtn"
            app:layout_constraintHorizontal_chainStyle="packed"
            android:layout_marginStart="@dimen/padding_large"
            android:layout_marginTop="@dimen/padding_large"
            android:layout_marginEnd="@dimen/padding_large"
            android:hint="@string/searchHint"
            >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/searchEt"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/white"
            />
        </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/submitBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/search"
                app:layout_constraintTop_toBottomOf="@id/toolbar"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/textLayout"
                android:layout_marginEnd="@dimen/padding_large"
                android:layout_marginTop="@dimen/padding_large"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/repoList"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="@null"
            app:layout_constraintTop_toBottomOf="@+id/textLayout"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            tools:listitem="@layout/row_repo"
            android:visibility="@{!viewModel.isNoData}"
            tools:visibility="visible"/>

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/noDataTv"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/textLayout"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:textAlignment="center"
            android:text="@{viewModel.noDataText}"
            android:visibility="@{viewModel.isNoData}"
            tools:visibility="gone"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>